--- a/fresh/app/globals.css
+++ b/fresh/app/globals.css
@@ -1,3 +1,15 @@
-.red {
+body {
+  margin : 0;
+  background: #303030;
+  color: white
+}
+
+.title {
+  text-align: center;
+  margin-top: 150px;
   color: red
+}
+
+.title-sub {
+  text-align: center;
 }
